# backend

./: .gitignore  README.md  config.toml  file_upload_test_script.py  pyproject.toml
.github/workflows/: pytest.yml
ca/: cert.pem  key.pem
scripts/: __example.py  corrupt_file.py  corrupt_file_metadata.py  corrupt_fileshare.py  corrupt_message.py  corrupt_otp.py  corrupt_prekey.py  corrupt_public_key.py
src/app/: main.py
src/app/core/: __init__.py  verify.py
src/app/middleware/: __init__.py  rate_limit.py
src/app/models/: __init__.py  schema.py
src/app/models/requests/: __init__.py  base.py  download_file.py  files.py  register_account.py  serde_base.py  signed_payload.py  x3dh.py
src/app/routers/: __example.py  __init__.py  auth.py  files.py  x3dh.py
src/app/shared/: __init__.py  config.py  db.py  logger.py
src/app/shared/http/: __http.py  __init__.py
tests/: __init__.py  test_db.py  test_download_file.py  test_file_size_limits.py  test_path_validation.py  test_upload_flow.py
