[project]
name = "cryptographic-file-sharing-server"
version = "0.1.0"
description = "A FastAPI server for secure file sharing with cryptographic operations."
authors = [
    {name = "Your Name", email = "you@example.com"}, # TODO: Replace with your details
]
readme = "README.md"

dependencies = [
    #"sqlalchemy>=2.0.0", # For ORM capabilities
    #"alembic>=1.9.0", # For database migrations
    # Add other dependencies here as needed, e.g.:
    # "cryptography>=3.4.0", # For cryptographic operations
    # "python-multipart>=0.0.5", # For file uploads
    "sqlmodel>=0.0.24",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.41",
    "alembic>=1.15.2",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0", # For testing FastAPI applications
    "ruff>=0.11.10",
    "pyright>=1.1.400",

]

[tool.uv]
package = true
# UV specific configurations can go here if needed in the future

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# select = ["E", "F", "I"] # Select E (pycodestyle), F (Pyflakes), I (isort)
# target-version = "py38"

[tool.ruff.lint]
select = [
  "F",    # PyFlakes
  "E",    # Error
  "W",    # Warning
  "I",    # isort
  "N",    # pep8-naming
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "LOG",  # flake8-logging
  "G",    # flake8-logging-format
  "Q",    # flake8-quotes
  "SLF",  # flake8-self
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "PTH",  # flake8-use-pathlib
  "FIX",  # flake8-fixme
  "PL",   # Pylint
  # "PLC",    # Pylint-Convention
  # "PLE",    # Pylint-Error
  # "PLR",    # Pylint-Refactor
  # "PLW",    # Pylint-Warning
  "PERF", # Perflint
  "FURB", # refurb
  "RUF",  # Ruff
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[project.scripts]
app = "app.main:main"
# dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000" # TODO: uncomment and adjust if you want a script 