[project]
name = "benji"
version = "0.1.0"
description = "A FastAPI server for secure file sharing with cryptographic operations."
authors = [
    { name = "Jeaic K-C" },
    { name = "Vóilet" },
    { name = "C" },
    { name = "Ushhhh" },
]
readme = "README.md"

dependencies = [
    "sqlmodel>=0.0.24",
    "cryptography>=45.0.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.41",
    "alembic>=1.15.2",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.24.0",    # For testing FastAPI applications
    "pytest>=7.0.0",
    "ruff>=0.11.10",
    "pyright>=1.1.400",
]

[tool.uv]
package = true

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# select = ["E", "F", "I"] # Select E (pycodestyle), F (Pyflakes), I (isort)
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",   # PyFlakes
    "E",   # Error
    "W",   # Warning
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "LOG", # flake8-logging
    "G",   # flake8-logging-format
    "Q",   # flake8-quotes
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "PTH", # flake8-use-pathlib
    "FIX", # flake8-fixme
    "PL",  # Pylint
    # "PLC",    # Pylint-Convention
    # "PLE",    # Pylint-Error
    # "PLR",    # Pylint-Refactor
    # "PLW",    # Pylint-Warning
    "PERF", # Perflint
    "FURB", # refurb
    "RUF",  # Ruff
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
]

[project.scripts]
app = "app.main:main"

# TODO: uncomment and adjust if you want a script
# dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000" 
